--- a/templates/index.Chat.html
+++ b/templates/index.Chat.html
@@ -12,8 +12,7 @@
 <body>
     <nav class="navbar" id="navbar">
             <a class="element" href="{{ url_for('sobrenos') }}">Sobre nós</a>
-            <a class="element" href="{{ url_for('index') }}">HUB</a>
-            
+            <a class="element" href="{{ url_for('hub') }}">HUB</a>   
     </nav>
     <section class="chat" id="chat">
         <div class="telachat">
