--- a/templates/index.cadrastro.html
+++ b/templates/index.cadrastro.html
@@ -12,11 +12,13 @@
     iptEmailTcad == input email pro cadrastro
     iptsenha1Tcad == input da primeira senha digitada pelo usuario
     iptsenha2Tcad == input da repetição da senha informada para ferificação de igualdade
+
+    colocar dps
+    onsubmit="return VerificaSenha()"
     -->
 </head>
 <body>
-    <form class="forn" action="cadastrar" method="post" onsubmit="return VerificaSenha()">
-        
+    <form class="forn" action="cadastrar" method="post" </form>>
         <div class="painelLateral">
             <section class="form-cad">
                 <center>
