--- a/static/css/style.login.css
+++ b/static/css/style.login.css
@@ -1,62 +1,83 @@
 :root {
     --posicaoinput: 28%;
     --marginnav: 110px;
+    --CinzaAzulado:#3a3f61;
+    --AzulClaro:#36639c;
+    --AzulEscuro:#052a5e;
+    --PretoAzulado:#020c25;
+    --VermelhoTerra:#651f17;
+    --Laranja:#f06929;
+}
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
 body {
-    margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #d3d3d3;
+    background-color: transparent;
 }
-
 .left-panel {
     position: absolute;
     width: 50%;
     height: 100%;
     left: 50%;
 }
-
-.img {
-    position: absolute;
+.img{
     width: 100%;
     height: 100%;
+    background-color: var(--AzulEscuro);
 }
-
-.right-panel {
+.geniodadiv {
     position: absolute;
-    background-color: #333;
-    width: 50%;
-    height: 100%;
-    left: 0%;
+    margin: 7% 5% 0 5%;
+    height: 92.5%;
+    width: 90%;
 }
-
+.right-panel {
+    background-color: var(--PretoAzulado);
+    position: absolute;
+    height: 100%;
+    width: 50%;
+}
+.geniodadiv2{
+    background-color: var(--AzulEscuro);
+    margin: 5%;
+    height: 90%;
+    width: 75%;
+}
 .loginform {
     position: relative;
     width: 100%;
     height: 100%;
 }
-
 .nav {
+    background-color:var(--PretoAzulado);
     position: absolute;
-    width: 98%;
-    top: 1%;
-    left: 2%;
-    background: transparent;
+    width: 100%;
+    height: 4%;
     z-index: 99;
 }
-
 .nav a {
+    background-color:var(--AzulEscuro); 
     margin-left: var(--marginnav);
     margin-right: var(--marginnav);
+    top: 9px;
+    left: 29px;
+    position: relative;
     font-size: 18px;
-    color: #828181;
+    color: #00bdd6;
     text-decoration: none;
     transition: all 0.9s ease-in-out;
+    border: 2px solid rgba(0, 0, 0, 0.432);
+    border-radius: 30px;
+    padding: 3px;
 }
-
 .nav a:hover {
     color: #ffffff;
+    border: 3px solid rgba(121, 121, 121, 0.432);
+    background-color: #000000;
 }
-
 .hidepassword {
     background: transparent;
     border: 0px;
@@ -66,7 +87,6 @@ body {
     width: 35px;
     height: 35px;
 }
-
 .olhoaberto {
     position: absolute;
     left: 50%;
@@ -77,21 +97,19 @@ body {
 }
 .signup {
     position: relative;
-    top: 90%;
+    top: -7%;
     text-align: center;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     line-height: 1rem;
     color: rgba(156, 163, 175, 1);
   }
 /*--------------------------------------------------------*/
-.logo {
-    height: 100px;
-    width: 100px;
+.logo{
+    width: 70px;
+    height: 70px;
     position: absolute;
-    top: 1%;
-    left: 1%;
+    margin: 10px;
 }
-
 .login {
     position: absolute;
     left: 40%;
@@ -99,15 +117,13 @@ body {
     font-size: 5em;
     color: #d3d3d3;
 }
-
 .input-group {
     position: absolute;
     top: var(--posicaoinput);
-    left: 23%;
+    left: 9.5%;
 }
-
 .input {
-    width: 500px;
+    width: 550px;
     border: solid 1.5px #9e9e9e;
     border-radius: 1rem;
     background: none;
@@ -116,7 +132,6 @@ body {
     color: #f5f5f5;
     transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .user-label {
     position: absolute;
     left: 15px;
@@ -126,13 +141,11 @@ body {
     transform: translateY(1rem);
     transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .input:focus,
 input:valid {
     outline: none;
     border: 1.5px solid #1a73e8;
 }
-
 .input:focus~label,
 input:valid~label {
     transform: translateY(-50%) scale(0.8);
@@ -141,16 +154,14 @@ input:valid~label {
     color: #2196f3;
     font-size: 1.5em;
 }
-
 /*------------------------------------------------------------------------*/
 .input-group-senha {
     position: absolute;
     top: calc(var(--posicaoinput) + 10%);
-    left: 23%;
+    left: 9.5%;
 }
-
 .input-senha {
-    width: 500px;
+    width: 550px;
     border: solid 1.5px #9e9e9e;
     border-radius: 1rem;
     background: none;
@@ -159,7 +170,6 @@ input:valid~label {
     color: #f5f5f5;
     transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .user-label-senha {
     position: absolute;
     left: 15px;
@@ -169,13 +179,11 @@ input:valid~label {
     transform: translateY(1rem);
     transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .input-senha:focus,
 input:valid {
     outline: none;
     border: 1.5px solid #1a73e8;
 }
-
 .input-senha:focus~label,
 input:valid~label {
     transform: translateY(-50%) scale(0.8);
@@ -184,12 +192,11 @@ input:valid~label {
     color: #2196f3;
     font-size: 1.5em;
 }
-
 /*------------------------------------------------------------------------*/
 .btn-submit {
     position: absolute;
     top: 80%;
-    left: 45%;
+    left: 81%;
     padding: 1.3em 3em;
     font-size: 12px;
     text-transform: uppercase;
@@ -204,14 +211,12 @@ input:valid~label {
     cursor: pointer;
     outline: none;
 }
-
 .btn-submit:hover {
     background-color: #1fa36e;
     box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
     color: rgb(255, 255, 255);
     transform: translateY(-7px);
 }
-
 .btn-submit:active {
     transform: translateY(-1px);
 }
