--- a/templates/index.Chat.html
+++ b/templates/index.Chat.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.chat.css') }}">
-    
 </head>
-
 <body>
+    <img class="logo" src="/static/imgs/logo.png" alt="">
     <nav class="navbar" id="navbar">
             <a class="element" href="{{ url_for('sobrenos') }}">Sobre nós</a>
             <a class="element" href="{{ url_for('hub') }}">HUB</a>   
