--- a/templates/index.cadrastro.html
+++ b/templates/index.cadrastro.html
@@ -18,6 +18,7 @@
     -->
 </head>
 <body>
+    <img class="logo" src="/static/imgs/logo.png" alt="">
     <form class="forn" action="cadastrar" method="post" </form>>
         <div class="painelLateral">
             <section class="form-cad">
