--- a/static/css/style.login.css
+++ b/static/css/style.login.css
@@ -7,6 +7,16 @@
     --PretoAzulado:#020c25;
     --VermelhoTerra:#651f17;
     --Laranja:#f06929;
+    --color-gpt-green: #10A37F;
+    --color-light-green: #DFF4F0;
+    --color-dark-gray: #343541;
+    --color-medium-gray: #40414F;
+    --color-light-gray: #202123;
+    --color-white: #FFFFFF;
+    --color-light-blue: #19C9E1;
+    --color-soft-purple: #8C8D9F;
+    --color-black: #000000;
+    --color-neutral-beige: #F7F7F8;
 }
 *{
     margin: 0;
@@ -31,7 +41,7 @@ body {
 .geniodadiv {
     position: absolute;
     margin: 7% 5% 0 5%;
-    height: 92.5%;
+    height: 90%;
     width: 90%;
 }
 .right-panel {
@@ -41,10 +51,12 @@ body {
     width: 50%;
 }
 .geniodadiv2{
-    background-color: var(--AzulEscuro);
+    background-color: var(--color-neutral-beige);
     margin: 5%;
     height: 90%;
-    width: 75%;
+    width: 87%;
+    border: 1px solid transparent;
+    border-radius: 20px;
 }
 .loginform {
     position: relative;
@@ -55,7 +67,7 @@ body {
     background-color:var(--PretoAzulado);
     position: absolute;
     width: 100%;
-    height: 4%;
+    height: 5%;
     z-index: 99;
 }
 .nav a {
@@ -82,8 +94,8 @@ body {
     background: transparent;
     border: 0px;
     position: absolute;
-    top: 8px;
-    left: 88%;
+    top: 10px;
+    left: 93%;
     width: 35px;
     height: 35px;
 }
@@ -112,31 +124,31 @@ body {
 }
 .login {
     position: absolute;
-    left: 40%;
+    left: calc(74% / 2);
     top: 5%;
     font-size: 5em;
-    color: #d3d3d3;
+    color: var(--PretoAzulado);
 }
 .input-group {
     position: absolute;
     top: var(--posicaoinput);
-    left: 9.5%;
+    left: calc(18% / 2);
 }
 .input {
-    width: 550px;
-    border: solid 1.5px #9e9e9e;
+    width: 640px;
+    border: solid 3px var(--AzulEscuro);
     border-radius: 1rem;
     background: none;
     padding: 1rem;
     font-size: 1rem;
-    color: #f5f5f5;
+    color: var(--AzulEscuro);
     transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .user-label {
     position: absolute;
     left: 15px;
     top: -1%;
-    color: #e8e8e8;
+    color: var(--AzulEscuro);
     pointer-events: none;
     transform: translateY(1rem);
     transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
@@ -144,37 +156,37 @@ body {
 .input:focus,
 input:valid {
     outline: none;
-    border: 1.5px solid #1a73e8;
+    border: 1.5px solid var(--AzulEscuro);
 }
 .input:focus~label,
 input:valid~label {
     transform: translateY(-50%) scale(0.8);
-    background-color: #333;
+    background-color: white;
     padding: 0 .2em;
-    color: #2196f3;
-    font-size: 1.5em;
+    color: var(--AzulEscuro);
+    font-size: 2.1em;
 }
 /*------------------------------------------------------------------------*/
 .input-group-senha {
     position: absolute;
     top: calc(var(--posicaoinput) + 10%);
-    left: 9.5%;
+    left: calc(18% / 2);
 }
 .input-senha {
-    width: 550px;
-    border: solid 1.5px #9e9e9e;
+    width: 640px;
+    border: solid 3px var(--AzulEscuro);
     border-radius: 1rem;
     background: none;
     padding: 1rem;
     font-size: 1rem;
-    color: #f5f5f5;
+    color: var(--AzulEscuro);
     transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .user-label-senha {
     position: absolute;
     left: 15px;
     top: -1%;
-    color: #e8e8e8;
+    color: var(--AzulEscuro);
     pointer-events: none;
     transform: translateY(1rem);
     transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
@@ -182,31 +194,31 @@ input:valid~label {
 .input-senha:focus,
 input:valid {
     outline: none;
-    border: 1.5px solid #1a73e8;
+    border: 2px solid var(--AzulEscuro);
 }
 .input-senha:focus~label,
 input:valid~label {
     transform: translateY(-50%) scale(0.8);
-    background-color: #333;
+    background-color: white;
     padding: 0 .2em;
-    color: #2196f3;
-    font-size: 1.5em;
+    color: var(--AzulEscuro);
+    font-size: 2.1em;
 }
 /*------------------------------------------------------------------------*/
 .btn-submit {
     position: absolute;
-    top: 80%;
-    left: 81%;
+    top: 70%;
+    left: 38%;
     padding: 1.3em 3em;
-    font-size: 12px;
+    font-size: 18px;
     text-transform: uppercase;
     letter-spacing: 2.5px;
     font-weight: 500;
-    color: #000;
+    color: var(--color-light-gray);
     background-color: #fff;
-    border: none;
+    border: 1px solid black;
     border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 8px 15px rgba(21, 255, 0, 0.5); /* Sombra verde */
     transition: all 0.8s ease 0s;
     cursor: pointer;
     outline: none;
@@ -219,31 +231,4 @@ input:valid~label {
 }
 .btn-submit:active {
     transform: translateY(-1px);
-}
-@media(max-width: 1366px) {
-    .input {
-        width: 400px;
-    }
-
-    .input-group {
-        top: calc(var(--posicaoinput) + 15%);
-    }
-
-    .input-senha {
-        width: 400px;
-    }
-
-    .input-group-senha {
-        top: calc(var(--posicaoinput) + 35%);
-    }
-
-    .nav {
-        width: 97%;
-    }
-
-    .nav a {
-        font-size: 19px;
-        margin-left: calc(var(--marginnav) - 10px);
-        margin-right: calc(var(--marginnav) -10px);
-    }
 }
