--- a/templates/index.login.html
+++ b/templates/index.login.html
@@ -16,7 +16,7 @@
         <nav class="nav">
             <a href="{{ url_for('sobrenos') }}">Sobre nós</a>
             <a href="{{ url_for('cadastrar') }}">Cadastrar-se</a>
-            <a class="element" href="{{ url_for('hub') }}">Hub</a>
+            <a class="element" href="{{ url_for('index') }}">Hub</a>
         </nav>
         <div class="img">
             <img class="geniodadiv" src="/static/imgs/iamgem.login.png" alt="">
