--- a/templates/index.cadrastro.html
+++ b/templates/index.cadrastro.html
@@ -18,7 +18,7 @@
     -->
 </head>
 <body>
-    <form class="forn" action="cadastrar" method="post" </form>>
+    <form class="forn" action="cadastrar" method="post" onsubmit="return VerificaSenha()" </form>
         <div class="painelLateral">
             <section class="form-cad">
                 <center>
