alterações finais, acabo

--- a/static/css/style.hub.css
+++ b/static/css/style.hub.css
@@ -20,7 +20,7 @@ body{
     border-left: 11px solid var(--VermelhoTerra);
     height: 1000px;
     margin: 20px; 
-    top: 0%;
+    top: 2.3%;
     left: 60%;
     z-index: 99;
 }
@@ -31,7 +31,7 @@ body{
     transform: rotate(45deg); 
     margin: 50px; 
     position: absolute;
-    top: 42%;
+    top: 42.5%;
     left: 84.5%;
     z-index: 99;
 }
@@ -49,7 +49,7 @@ body{
 .triangulo {
     position: absolute;
     top: 52.3%;
-    left: 34%;
+    left: 33.5%;
     z-index: 99;
     transform: rotate(90deg);
     width: 0px;
@@ -63,6 +63,7 @@ body{
     height: 70px;
     position: absolute;
     margin: 10px;
+    z-index: 99;
 }
 .centro{
     background-color: transparent;
@@ -201,12 +202,12 @@ body{
     left: 0;
     position: relative;
     top: 0;
-    animation: slide 66s steps(33) infinite; /* 33 itens * 1.5s por item */
+    animation: slide 66s steps(33) infinite;
 }
 
 @keyframes slide {
     100% {
-        top: -2970px; /* 33 itens * 90px */
+        top: -2970px;
     }
 }
 .dinamico li span::after {
@@ -233,80 +234,3 @@ body{
         border-color: transparent;
     }
 }
-/*
-.navbar {
-    position: relative;
-    display: flex;
-    justify-content: right;
-    align-items: top;
-    padding: 10px 20px;
-    background: transparent;
-    left: 43%;
-    top: -210px;
-}
-.navbar a {
-    margin: 0 10px;
-    text-decoration: none;
-    color: black;
-    font-size: 16px;
-}
-.navbar .element {
-    position: relative;
-    overflow: hidden;
-    border: 1px solid transparent;
-    border-radius: 5px;
-    background-color: transparent;
-  }
-  
-  .navbar .element::before {
-    content: "";
-    position: absolute;
-    top: 15px;
-    left: 0;
-    width: 0;
-    height: 3px;
-    border: 1px solid #5918db;
-    border-radius: 5px;
-    background-color: #5918db;
-    transition: width 0.5s ease-in-out;
-  }
-
-
-  .navbar .element:hover::before {
-    width: 100%;
-  }
-.navbar a.signin {
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 5px 10px;
-    background: white;
-}
-.navbar a.signin:hover{
-    background: rgb(0, 0, 0);
-    border: 1px solid rgb(53, 53, 53);
-    transition: all 0.5s ease-in-out;
-    color: #fff;
-}
-.navbar a.signin:not(:hover) {
-    transition: all 0.9s ease-in-out;
-    border: 1px solid black;
-    background: transparent;
-}
-.navbar a.register{
-    background:white;
-    color: rgb(0, 0, 0);
-    padding: 5px 10px;
-    border: 1px solid black;
-    border-radius: 5px;
-}
-.navbar a.register:hover{
-    background: rgb(0, 0, 0);
-    border: 1px solid rgb(53, 53, 53);
-    transition: all 0.5s ease-in-out;
-    color: #fff;
-}
-.navbar a.register:not(:hover){
-    transition: all 0.9s ease-in-out;
-    border: 1px solid rgb(0, 0, 0);
-    background: transparent;
-} */
