--- a/templates/index.sobrenos.html
+++ b/templates/index.sobrenos.html
@@ -10,7 +10,7 @@
         <h1 class="Titulo">Callista</h1>
         <nav>
             <ul>
-                <a class="element" href="{{ url_for('index') }}">HUB</a>
+                <a class="element" href="{{ url_for('hub') }}">HUB</a>
                 <a href="{{ url_for('login') }}" class="signin">Login</a>
 
                 <li><a href="#">Produtos</a></li>
