--- a/static/css/style.cadastro.css
+++ b/static/css/style.cadastro.css
@@ -1,36 +1,264 @@
 :root{
-  --CinzaAzulado:#7d84b9;
-    --AzulClaro:#36639c;
-    --AzulEscuro:#052a5e;
-    --PretoAzulado:#020c25;
-    --VermelhoTerra:#651f17;
-    --Laranja:#f06929;
+  --posicaoinput: 28%;
+  --marginnav: 110px;
+  --CinzaAzulado:#3a3f61;
+  --AzulClaro:#36639c;
+  --AzulEscuro:#052a5e;
+  --PretoAzulado:#020c25;
+  --VermelhoTerra:#651f17;
+  --Laranja:#f06929;
+  --color-gpt-green: #10A37F;
+  --color-light-green: #DFF4F0;
+  --color-dark-gray: #343541;
+  --color-medium-gray: #40414F;
+  --color-light-gray: #202123;
+  --color-white: #FFFFFF;
+  --color-light-blue: #19C9E1;
+  --color-soft-purple: #8C8D9F;
+  --color-black: #000000;
+  --color-neutral-beige: #F7F7F8;
 }
-* {
+*{
   margin: 0;
   padding: 0;
+  font-family: Arial, sans-serif;
 }
-.form-cad {
-  background-color: --;
-  width: 95%;
-  height: 90%;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+html{
+  width: 100%;
+  height: 100%;
 }
-.painelLateral {
+body{
+  width: 100%;
+  height: 100%;
+}
+.logo{
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  margin: 10px;
+}
+.form{
+  background-color:var(--PretoAzulado);
   width: 50%;
   height: 100%;
-  background: #5D5B6D;
-  position: absolute;
 }
-.Cadastrese {
+.geniodadiv {
   position: absolute;
-  top: 4%;
+  height: 90%;
+  width: 90%;
+  top: 2.5%;
+  left: 5.2%;
+  border: 1px solid transparent;
+  border-radius: 20px;
+}
+.paineldireito{
+  position: absolute;
+  width: 40%;
+  height: 90%;
+  background-color: #ffffff;
+  left: 4%;
+  top: 2.5%;
+  border: solid 1px transparent;
+  border-radius: 20px;
+}
+.painelesquerdo{
+  position: absolute;
   left: 50%;
-  transform: translate(-50%, 4%);
-  font-size: 2.6rem;
+  top: 0%;
+  width: 50%;
+  height: 100%;
+  background-color: var(--PretoAzulado);
+}
+.input-email {
+  width: 640px;
+  border: solid 3px var(--AzulEscuro);
+  border-radius: 1rem;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: black;
+  transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.user-label-email {
+  position: absolute;
+  left: 15px;
+  top: -1%;
+  color: var(--AzulEscuro);
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-email:focus,
+input:valid {
+  outline: none;
+  border: 1.5px solid var(--AzulEscuro);
+}
+.input-email:focus~label,
+input:valid~label {
+  transform: translateY(-50%) scale(0.8);
+    background-color: white;
+    padding: 0 .2em;
+    color: var(--AzulEscuro);
+    font-size: 2.1em;
+}
+.input-group-email {
+  position: absolute;
+  top: 22%;
+  left: 5%;
+  margin: 10px;
+}
+
+.input-pnome {
+  width: 290px;
+  border: solid 3px var(--AzulEscuro);
+  border-radius: 1rem;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: black;
+  transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.user-label-pnome {
+  position: absolute;
+  left: 15px;
+  top: -1%;
+  color: var(--AzulEscuro);
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);;
+}
+.input-pnome:focus,
+input:valid {
+  outline: none;
+  border: 1.5px solid var(--AzulEscuro);
+}
+.input-pnome:focus~label,
+input:valid~label {
+    transform: translateY(-50%) scale(0.8);
+    background-color: white;
+    padding: 0 .2em;
+    color: var(--AzulEscuro);
+    font-size: 2.1em;
+}
+.input-group-pnome {
+  position: absolute;
+  top: 32%;
+  left: 5%;
+  margin: 10px;
+}
+.input-group-snome {
+  position: absolute;
+  top: 32%;
+  left: 50.5%;
+  margin: 10px;
+}
+.input-snome {
+  width: 290px;
+  border: solid 3px var(--AzulEscuro);
+  border-radius: 1rem;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: black;
+  transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.user-label-snome {
+  position: absolute;
+  left: 15px;
+  top: -1%;
+  color: var(--AzulEscuro);
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-snome:focus,
+input:valid {
+  outline: none;
+  border: 1.5px solid var(--AzulEscuro);
+}
+.input-snome:focus~label,
+input:valid~label {
+  transform: translateY(-50%) scale(0.8);
+  background-color: white;
+  padding: 0 .2em;
+  color: var(--AzulEscuro);
+  font-size: 2.1em;
+}
+.input-group-senha1 {
+  position: absolute;
+  top: 43%;
+  left: 5%;
+  margin: 10px;
+}
+.input-senha1 {
+  width: 640px;
+  border: solid 3px var(--AzulEscuro);
+  border-radius: 1rem;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: black;
+  transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.user-label-senha1 {
+  position: absolute;
+  left: 15px;
+  top: -1%;
+  color: var(--AzulEscuro);
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-senha1:focus,
+input:valid {
+  outline: none;
+  border: 1.5px solid var(--AzulEscuro);
+}
+.input-senha1:focus~label,
+input:valid~label {
+  transform: translateY(-50%) scale(0.8);
+    background-color: white;
+    padding: 0 .2em;
+    color: var(--AzulEscuro);
+    font-size: 2.1em;
+}
+.input-group-senha2 {
+  position: absolute;
+  top: 54%;
+  left: 5%;
+  margin: 10px;
+}
+.input-senha2 {
+  width: 640px;
+  border: solid 3px var(--AzulEscuro);
+  border-radius: 1rem;
+  background: none;
+  padding: 1rem;
+  font-size: 1rem;
+  color: black;
+  transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.user-label-senha2 {
+  position: absolute;
+  left: 15px;
+  top: -1%;
+  color: var(--AzulEscuro);
+  pointer-events: none;
+  transform: translateY(1rem);
+  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-senha2:focus,
+input:valid {
+  outline: none;
+  border: 1.5px solid var(--AzulEscuro);
+}
+.input-senha2:focus~label,
+input:valid~label {
+  transform: translateY(-50%) scale(0.8);
+  background-color: white;
+  padding: 0 .2em;
+  color: var(--AzulEscuro);
+  font-size: 2.1em;
 }
 .hidepassword {
   background: transparent;
@@ -49,217 +277,13 @@
   width: 35px;
   height: 35px;
 }
-.signup {
-  position: relative;
-  top: 90%;
-  text-align: center;
-  font-size: 1.1rem;
-  line-height: 1rem;
-  color: rgba(156, 163, 175, 1);
-}
-/*-----------------------------------------------------------------------------*/
-.input-group-pnome {
-  position: absolute;
-  top: 22%;
-  left: 0%;
-  margin: 10px;
-}
-.input-pnome {
-  width: 370px;
-  border: solid 1.5px #9e9e9e;
-  border-radius: 1rem;
-  background: none;
-  padding: 1rem;
-  font-size: 1rem;
-  color: #f5f5f5;
-  transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.user-label-pnome {
-  position: absolute;
-  left: 15px;
-  top: -1%;
-  color: #e8e8e8;
-  pointer-events: none;
-  transform: translateY(1rem);
-  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.input-pnome:focus,
-input:valid {
-  outline: none;
-  border: 1.5px solid #1a73e8;
-}
-.input-pnome:focus~label,
-input:valid~label {
-  transform: translateY(-50%) scale(0.8);
-  background-color: #5D5B6D;
-  padding: 0 .2em;
-  color: #2196f3;
-  font-size: 1.2em;
-}
-/*-----------------------------------------------------------------------------*/
-.input-group-snome {
-  position: absolute;
-  top: 22%;
-  left: 47%;
-  margin: 10px;
-}
-.input-snome {
-  width: 370px;
-  border: solid 1.5px #9e9e9e;
-  border-radius: 1rem;
-  background: none;
-  padding: 1rem;
-  font-size: 1rem;
-  color: #f5f5f5;
-  transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.user-label-snome {
-  position: absolute;
-  left: 15px;
-  top: -1%;
-  color: #e8e8e8;
-  pointer-events: none;
-  transform: translateY(1rem);
-  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.input-snome:focus,
-input:valid {
-  outline: none;
-  border: 1.5px solid #1a73e8;
-}
-.input-snome:focus~label,
-input:valid~label {
-  transform: translateY(-50%) scale(0.8);
-  background-color: #5D5B6D;
-  padding: 0 .2em;
-  color: #2196f3;
-  font-size: 1.2em;
-}
-/*-----------------------------------------------------------------------------*/
-.input-group-email {
-  position: absolute;
-  top: 32%;
-  left: 0%;
-  margin: 10px;
-}
-.input-email {
-  width: 800px;
-  border: solid 1.5px #9e9e9e;
-  border-radius: 1rem;
-  background: none;
-  padding: 1rem;
-  font-size: 1rem;
-  color: #f5f5f5;
-  transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.user-label-email {
-  position: absolute;
-  left: 15px;
-  top: -1%;
-  color: #e8e8e8;
-  pointer-events: none;
-  transform: translateY(1rem);
-  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.input-email:focus,
-input:valid {
-  outline: none;
-  border: 1.5px solid #1a73e8;
-}
-.input-email:focus~label,
-input:valid~label {
-  transform: translateY(-50%) scale(0.8);
-  background-color: #5D5B6D;
-  padding: 0 .2em;
-  color: #2196f3;
-  font-size: 1.2em;
-}
-/*-----------------------------------------------------------------------------*/
-.input-group-senha1 {
-  position: absolute;
-  top: 43%;
-  left: 0%;
-  margin: 10px;
-}
-.input-senha1 {
-  width: 800px;
-  border: solid 1.5px #9e9e9e;
-  border-radius: 1rem;
-  background: none;
-  padding: 1rem;
-  font-size: 1rem;
-  color: #f5f5f5;
-  transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.user-label-senha1 {
-  position: absolute;
-  left: 15px;
-  top: -1%;
-  color: #e8e8e8;
-  pointer-events: none;
-  transform: translateY(1rem);
-  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.input-senha1:focus,
-input:valid {
-  outline: none;
-  border: 1.5px solid #1a73e8;
-}
-.input-senha1:focus~label,
-input:valid~label {
-  transform: translateY(-50%) scale(0.8);
-  background-color: #5D5B6D;
-  padding: 0 .2em;
-  color: #2196f3;
-  font-size: 1.2em;
-}
-/*-----------------------------------------------------------------------------*/
-.input-group-senha2 {
-  position: absolute;
-  top: 54%;
-  left: 0%;
-  margin: 10px;
-}
-.input-senha2 {
-  width: 800px;
-  border: solid 1.5px #9e9e9e;
-  border-radius: 1rem;
-  background: none;
-  padding: 1rem;
-  font-size: 1rem;
-  color: #f5f5f5;
-  transition: border 1s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.user-label-senha2 {
-  position: absolute;
-  left: 15px;
-  top: -1%;
-  color: #e8e8e8;
-  pointer-events: none;
-  transform: translateY(1rem);
-  transition: 1s cubic-bezier(0.4, 0, 0.2, 1);
-}
-.input-senha2:focus,
-input:valid {
-  outline: none;
-  border: 1.5px solid #1a73e8;
-}
-.input-senha2:focus~label,
-input:valid~label {
-  transform: translateY(-50%) scale(0.8);
-  background-color: #5D5B6D;
-  padding: 0 .2em;
-  color: #2196f3;
-  font-size: 1.2em;
-}
-/*------------------------------------------------------------------------*/
 .btn-submit {
   position: absolute;
   top: 80%;
   left: 50%;
   transform: translate(-50%, -80%);
   padding: 1.3em 3em;
-  font-size: 12px;
+  font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 500;
@@ -277,14 +301,26 @@ input:valid~label {
   box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
   color: rgb(255, 255, 255);
 }
-/*--------------------------------------------------------------------------------------------------------------------------*/
-@media(max-width: 1024px){
-  .input-group-snome {
-    left: 50%;
-    margin: 10px;
-  }
-  .btn-submit{
-    top: 80%;
-    left: 37%;
-  }
+.Cadastrese {
+  position: absolute;
+  top: 4%;
+  left: 50%;
+  transform: translate(-50%, 4%);
+  font-size: 2.8rem;
+}
+.text{
+  position: absolute;
+  top: 12%;
+  left: 50%;
+  transform: translate(-50%, 4%);
+  font-size: 1.5rem;
+}
+.signup {
+  position: relative;
+  top: 85%;
+  text-align: center;
+  font-size: 1.3rem;
+  line-height: 1rem;
+  color: rgba(156, 163, 175, 1);
+  z-index: 99;
 }
