--- a/static/css/style.login.css
+++ b/static/css/style.login.css
@@ -32,17 +32,16 @@ body {
     width: 50%;
     height: 100%;
     left: 50%;
-}
-.img{
-    width: 100%;
-    height: 100%;
-    background-color: var(--AzulEscuro);
+    background-color: var(--PretoAzulado);
 }
 .geniodadiv {
     position: absolute;
-    margin: 7% 5% 0 5%;
     height: 90%;
     width: 90%;
+    top: 2.5%;
+    left: 5.2%;
+    border: 1px solid transparent;
+    border-radius: 20px;
 }
 .right-panel {
     background-color: var(--PretoAzulado);
@@ -52,7 +51,7 @@ body {
 }
 .geniodadiv2{
     background-color: var(--color-neutral-beige);
-    margin: 5%;
+    margin: 3% 10px 10px 6%;
     height: 90%;
     width: 87%;
     border: 1px solid transparent;
@@ -69,26 +68,6 @@ body {
     width: 100%;
     height: 5%;
     z-index: 99;
-}
-.nav a {
-    background-color:var(--AzulEscuro); 
-    margin-left: var(--marginnav);
-    margin-right: var(--marginnav);
-    top: 9px;
-    left: 29px;
-    position: relative;
-    font-size: 18px;
-    color: #00bdd6;
-    text-decoration: none;
-    transition: all 0.9s ease-in-out;
-    border: 2px solid rgba(0, 0, 0, 0.432);
-    border-radius: 30px;
-    padding: 3px;
-}
-.nav a:hover {
-    color: #ffffff;
-    border: 3px solid rgba(121, 121, 121, 0.432);
-    background-color: #000000;
 }
 .hidepassword {
     background: transparent;
@@ -218,7 +197,6 @@ input:valid~label {
     background-color: #fff;
     border: 1px solid black;
     border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(21, 255, 0, 0.5); /* Sombra verde */
     transition: all 0.8s ease 0s;
     cursor: pointer;
     outline: none;
