--- a/templates/index.Hub.html
+++ b/templates/index.Hub.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.hub.css') }}">
 </head>
 <body>
-    <img class="logo" src="/static/imgs/logo.png" alt="">
+    <a href="{{ url_for('hub') }}"> <img class="logo" src="/static/imgs/logo.png" alt=""></a>
     <div class="losangulo"></div>
     <div class="losangulo2"></div>
     <div class="linha-vertical"></div>
